completed notif,upref validations
