# docs/swagger.yaml
@@ -42,7 +42,19 @@ definitions:
       user_id:
         type: string
     required:
+    - channels
+    - created_by_id
+    - created_by_name
+    - created_date
+    - maximum_retries
+    - message
+    - modified_by_id
+    - modified_by_name
+    - modified_date
     - notification_id
+    - priority
+    - send_at
+    - type
     - user_id
     type: object
   notification-system_internal_userpreference_model.Channel:
@@ -120,10 +132,15 @@ definitions:
         type: string
       user_preference_id:
         type: string
-      version:
-        type: string
     required:
+    - created_by_id
+    - created_by_name
+    - created_date
+    - modified_by_id
+    - modified_by_name
+    - modified_date
     - user_id
+    - user_preference_id
     type: object
 host: localhost:4001
 info:
@@ -217,7 +234,33 @@ paths:
       summary: Create user preference
       tags:
       - user-preferences
-  /user-preferences/{id}:
+  /user-preferences/{user_id}:
+    get:
+      description: Fetch user preference by user ID
+      parameters:
+      - description: User ID
+        in: path
+        name: user_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/notification-system_internal_userpreference_model.UserPreference'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/fiber.Map'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/fiber.Map'
+      summary: Get user preference
+      tags:
+      - user-preferences
     put:
       consumes:
       - application/json
